Lots of minor optimizations and cleanup as well as some bug fixes