@@ -1,12 +1,18 @@
 buildscript{
     ext{
-        getArcHash = {
-            return new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }["archash"]
+        arcHash = new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }["archash"]
+
+        localArc = { // TODO Shouldn't this just be a boolean?
+            return !project.hasProperty("release") && new File(rootDir.parent, 'Arc').exists()
         }
 
-        arcHash = getArcHash()
+        arcModule = { String name ->
+            //skip to last submodule
+            name = name.substring(name.lastIndexOf(':') + 1)
+            return "com.github.mindustry-antigrief${localArc() ? "" : ".Arc"}:$name:$arcHash"
+        }
     }
-    
+
     repositories{
         mavenLocal()
         mavenCentral()
@@ -16,19 +22,21 @@ buildscript{
     }
 
     dependencies{
-        classpath "com.github.Anuken.Arc:packer:$arcHash"
-        classpath "com.github.Anuken.Arc:arc-core:$arcHash"
+        classpath "com.mobidevelop.robovm:robovm-gradle-plugin:2.3.16"
+        classpath arcModule(":extensions:packer")
+        classpath arcModule(":arc-core")
     }
 }
 
 plugins{
-    id "org.jetbrains.kotlin.jvm" version "1.6.21"
-    id "org.jetbrains.kotlin.kapt" version "1.6.21" apply false
+    id "org.jetbrains.kotlin.jvm" version "1.7.0"
+    id "org.jetbrains.kotlin.kapt" version "1.7.0" apply false
+//    id "com.github.evestera.depsize" version "0.2.0"
 }
 
 allprojects{
     version = project.hasProperty("packageVersion") ? project.getProperty("packageVersion") : 'release'
-    group = 'com.github.Anuken'
+    group = 'com.github.mindustry-antigrief'
 
     ext{
         versionNumber = '7'
@@ -47,20 +55,6 @@ allprojects{
 
         debugged = {
             return new File(projectDir.parent, '../Mindustry-Debug').exists() && !project.hasProperty("release") && project.hasProperty("args")
-        }
-
-        localArc = {
-            return !project.hasProperty("release") && new File(projectDir.parent, '../Arc').exists()
-        }
-
-        arcModule = { String name ->
-            if(localArc()){
-                return project(":Arc:$name")
-            }else{
-                //skip to last submodule
-                if(name.contains(':')) name = name.split(':').last()
-                return "com.github.mindustry-antigrief.arc:$name:${getArcHash()}"
-            }
         }
 
         generateDeployName = { String platform ->
@@ -139,7 +133,6 @@ allprojects{
 
                 String buildid = getBuildVersion()
                 println("Compiling with build: '$buildid'")
-                if (localArc()) println("Compiling with localArc")
 
                 props["updateUrl"] = updateUrl
                 props["clientVersion"] = clientVersion
@@ -197,7 +190,7 @@ allprojects{
         targetCompatibility = JavaVersion.VERSION_1_8
         sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
-        options.compilerArgs += ["-Xlint:deprecation", "-Xmaxerrs", "5000"]
+        options.compilerArgs += ["-Xmaxerrs", "5000"]
         dependsOn clearCache
 
         options.forkOptions.jvmArgs += [
@@ -208,7 +201,7 @@ allprojects{
             '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+            '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
         ]
     }
 }
@@ -256,8 +249,8 @@ project(":core"){
         outputs.upToDateWhen{ false }
         generateLocales()
         writeVersion()
-        writeProcessors()
-        writePlugins()
+//        writeProcessors()
+//        writePlugins()
     }
 
     task copyChangelog{
@@ -309,6 +302,7 @@ project(":core"){
     }
 
     kapt {
+        showProcessorStats = true
         keepJavacAnnotationProcessors = true
         javacOptions{
             option("-source", "16")
@@ -325,7 +319,7 @@ project(":core"){
                 '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                 '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                 '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+                '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
         ])
     }
 
@@ -344,7 +338,7 @@ project(":core"){
         if(localArc() && debugged()) api arcModule("extensions:recorder")
         if(localArc()) api arcModule(":extensions:packer")
 
-        implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
+        implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.0"
 //        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0" Unused, removed to reduce jar size
 
         compileOnly files("../bouncycastle/bcprov-jdk15on.jar")
@@ -356,28 +350,30 @@ project(":core"){
 
         compileOnly project(":annotations")
         if (!project.hasProperty("noKapt")) kapt project(":annotations")
-        annotationProcessor 'com.github.Anuken:jabel:0.7.0'
+        annotationProcessor 'com.github.Anuken:jabel:0.8.0'
     }
 
     afterEvaluate{
         task mergedJavadoc(type: Javadoc){
-            def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
-            if(findProject(":android") != null){
-                blacklist += project(":android")
-            }
-
-            source rootProject.subprojects.collect{ project ->
-                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
-                    return project.sourceSets.main.allJava
+            doLast {
+                def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
+                if(findProject(":android") != null){
+                    blacklist += project(":android")
                 }
-            }
 
-            classpath = files(rootProject.subprojects.collect { project ->
-                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
-                    return project.sourceSets.main.compileClasspath
+                source rootProject.subprojects.collect{ project ->
+                    if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                        return project.sourceSets.main.allJava
+                    }
                 }
-            })
-            destinationDir = new File(buildDir, 'javadoc')
+
+                classpath = files(rootProject.subprojects.collect { project ->
+                    if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                        return project.sourceSets.main.compileClasspath
+                    }
+                })
+                destinationDir = new File(buildDir, 'javadoc')
+            }
         }
     }
 
@@ -401,7 +397,7 @@ project(":tests"){
 
     dependencies{
         testImplementation project(":core")
-        testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
+        testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.7.0"
         testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
         testImplementation arcModule("backends:backend-headless")
